tests/infer/illegal_span.co
// RUN: not choreo %s 2>&1| FileCheck %s

__co__ auto zero_span(f32 [2, 2] input) {
  in_shape_s : [4, 4];

  with tile_in_s in [input.span / in_shape_s]  {}
}

// CHECK: error: zero value is deduced for the mdspan inside the with-in statement.
// CHECK: Totally 1 errors have been detected.
